Fixed masthead spacing problem

--- a/css/mySiteStyles.css
+++ b/css/mySiteStyles.css
@@ -77,6 +77,7 @@
     font-size: 1rem; }
   @media (min-width: 768px) {
     .masthead h1 {
+      margin-top: 7rem;
       font-size: 4rem;
       line-height: 4rem; } }
   @media (min-width: 992px) {
