--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -23,9 +23,10 @@
     }
     @media(min-width: 768px) {
         h1 {
+            margin-top:7rem;
             font-size: 4rem;
             line-height: 4rem;
-    }
+        }
     }
     @media(min-width: 992px) {
         height: 100vh;
